# Digital_News_Assistant

./: .gitattributes  .replit  README.md  app.py  cron_config.md  pipeline.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
app/: dashboard.py
data/: market_data.db  warehouse.db
scripts/: extract.py  load.py  pipeline.py  transform.py
