[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "load>=1.0.14",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "requests>=2.34.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "textblob>=0.20.0",
]
